fixing isotope overlap issue

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -7,7 +7,6 @@ body {
 .wrapper{
 	max-width: 1100px;
 	margin: 0 auto;
-	position: relative;
 }
 
 header{
@@ -29,8 +28,6 @@ header{
 .headerContent svg{
 	width: 70px;
 }
-
-
 
 main{
 	position: relative;
